# smk

./: .dir-locals.el  .gitignore  .guix-authorizations  .guix-channel  alex.key  guix.scm  pyproject.toml
.guix/modules/: smk.scm  snakemake.scm
smk/: __init__.py  __main__.py  build.py  library.py  main.py
snakemake/: __main__.py  main.py
