[project]
name = "snakemake"
version = "0.1.0"
description = "Tiny buid script for C/C++"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich",
    "typer",
]
[project.scripts]
smk = "snakemake.__main__:app"
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"